# email_classifier

./: .env.example  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  alembic.ini  docker-compose-test.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_create_classification_record.py
app/: config.py  main.py
app/database/: base.py  session.py
app/helpers/: dto.py  enums.py
app/models/: classification.py
app/repositories/: classification.py
app/routers/: classify.py
app/schemas/: classification.py
app/services/: classification_service.py  classifier.py  hasher.py  parser.py
tests/: conftest.py  test_classification_service.py  test_classifier.py  test_hasher.py  test_helpers.py  test_parser.py  test_repository.py  test_router.py
tests/fixtures/: automated.eml  hard_p.eml  hard_s.eml  invalid.eml  newsletter.eml  no_from.eml  personal.eml  spam.eml  test.eml  transactional.eml  wrong_extension.elm
